--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="./index.html"><img src="./img/title.png" class="img-fluid"></a>
            </div>
 
-           <p class="text-center mt-2" style="color:#888888; font-size:0.9rem;">英語サイトを優先的に検索</p>
+           <p class="text-center mt-2" style="color:#888888; font-size:0.9rem;">英語サイトを優先的に表示</p>
 
            <form class="text-center">
              <div class="mb-3">
